<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>dev.dietermai.sailautil</groupId>
  <artifactId>sailautil</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <name>Saila Utilities</name>
  
  <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<!-- Used by maven-compiler-plugin -->
		<maven.compiler.release>15</maven.compiler.release>
	</properties>
	
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
  
</project>